coded logic for rock paper scissors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script>
             // computer will choose something randomly out of rock-paper-scissors
             function computerPlay() {
-                let randomint = Math.floor(Math.random * 3) + 1;    // returns random int between 1 and 3 (including)
+                let randomint = Math.floor(Math.random() * 3) + 1;    // returns random int between 1 and 3 (including)
 
                 let option = '';
                 if (randomint == 1) {
@@ -16,7 +16,7 @@
                 } else if (randomint == 2) {
                     option = 'paper';
                 } else {
-                    option = 'scissor'
+                    option = 'scissors';
                 }
 
                 return option;
@@ -24,8 +24,16 @@
 
             // player will input their move out of rock-paper-scissors
             function playerPlay() {
-                let option = prompt("enter rock/paper/scissors: ");
-
+                option = '';
+                while(true) {
+                    option = prompt("enter rock/paper/scissors: ");
+                    option = option.toLowerCase();
+                    if (option != 'rock' && option != 'paper' && option != 'scissors') {
+                        alert("invalid option");
+                    } else {
+                        break;
+                    }
+                } 
                 return option;
             }
 
@@ -36,9 +44,6 @@
             //     same is tie
             // then return the result as string
             function playRound(playerSelection, computerSelection) {
-                playerSelection = playerSelection.toLowerCase();
-                computerSelection = computerSelection.toLowerCase();
-
                 results = ''
                 if (playerSelection == computerSelection) {
                     results = 'D';
@@ -50,18 +55,49 @@
                     results = (computerSelection == 'paper') ? 'W' : 'L';
                 }
 
-                if (results == 'W') {
-                    results = `You Win! ${playerSelection} beats ${computerSelection}`;
-                } else if (results == 'L') {
-                    results = `You Lose! ${computerSelection} beats ${playerSelection}`;
-                } else {
-                    results = `Game Tied! ${playerSelection} ties ${computerSelection}`;
-                }
-
                 return results;
             }
 
+            function scores(playerScore, computerScore) {
+                console.log(`Scores: Player->${playerScore}  Computer->${computerScore}`);
+                if (playerScore > computerScore) {
+                    console.log('Player Wins!');
+                } else if (playerScore < computerScore) {
+                    console.log('Computer Wins!');
+                } else {
+                    console.log('Draw.');
+                }
+            }
+
             // loop it 5 times for 5 rounds and print answer each time
+            function game() {
+                let playerSelection, computerSelection;
+                let playerScore = computerScore = 0;
+                for (let i = 0; i < 5; i++) {
+                    playerSelection = playerPlay();
+                    computerSelection = computerPlay();
+                    results = playRound(playerSelection, computerSelection);
+
+                    switch (results) {
+                    case 'W':
+                        results = `You Win! ${playerSelection} beats ${computerSelection}`;
+                        playerScore++;
+                        break;
+                    case 'L':
+                        results = `You Lose! ${computerSelection} beats ${playerSelection}`;
+                        computerScore++;
+                        break;
+                    case 'D':
+                        results = `Game Tied! ${playerSelection} ties ${computerSelection}`;
+                        break;
+                    }
+                    console.log(results);
+                }
+                
+                scores(playerScore, computerScore);
+            }
+
+            game();
                 
         </script>
     </body>
