--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <html>
     <head>
         <title>Rock-Paper-Scissors</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="reset.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <main id="main">
+            <header>
+                <h1>ROCK PAPER SCISSORS!</h1>
+            </header>
 
-        <script src='script.js'></script>
-        
+            <div id="option">
+                <button id="rock" class="options">ROCK</button>
+                <button id="paper" class="options">PAPER</button>
+                <button id="scissors" class="options">SCISSORS</button>
+            </div>
+
+            
+
+        </main>
     </body>
+    <!-- <script src='script.js'></script> -->
 </html>
