got ugly interface

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 <button id="scissors" class="options">SCISSORS</button>
             </div>
 
-            
-
+            <div id='result'></div>
+            <div id='score'></div>
+            <div id='gameover'></div>
         </main>
     </body>
-    <!-- <script src='script.js'></script> -->
+    <script src='script.js'></script>
 </html>
