made style changes to result

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Dancing+Script&family=Fredoka+One&family=Pangolin&display=swap" rel="stylesheet">
     </head>
     <body>
         <main id="main">
